--- a/android-crmtab/app/build.gradle
+++ b/android-crmtab/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     compile 'net.hockeyapp.android:HockeySDK:3.5.0'
     compile 'org.osmdroid:osmdroid-android:5.0.1@aar'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.powermock:powermock-module-junit4:1.6.4'
