--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
@@ -112,7 +111,6 @@
             android:name=".ctruong.uc.propsect.suggestion.view.activity.DetailProspect"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".view.activity.NormalizeDemoActivity" />
-
         <activity android:name=".ctruong.uc.propsect.suggestion.view.activity.SynchronisationActivity" />
 
         <provider
@@ -127,15 +125,15 @@
             android:name=".ctruong.uc.propsect.suggestion.service.SyncService"
             android:enabled="true"
             android:exported="true"
-            android:process=":sync" >
+            android:process=":sync">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
+
             <meta-data
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/sync_adapter" />
         </service>
-
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -146,10 +144,18 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
         <activity android:name=".view.activity.FbEventActivity" />
-        <activity android:name=".view.activity.EventSubscriptionActivity"></activity>
+        <activity android:name=".view.activity.EventSubscriptionActivity" />
+        <activity android:name=".view.activity.TwitterActivity" />
 
+        <meta-data
+            android:name="CONSUMER_KEY"
+            android:value="d65Za9LU5SO5jcUlBql6Fla7e" />
+        <meta-data
+            android:name="CONSUMER_SECRET"
+            android:value="qGZ7CBkraYsYqvx7ZybBdmH2ToPi2Isu3Ir288J1cUDmhUoR75" />
+
+        <activity android:name=".view.activity.GoingEventDetails"></activity>
     </application>
 
 </manifest>
