--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -99,6 +99,7 @@
         <service android:name=".controller.service.CalendarService" />
         <service android:name=".controller.service.ListennerCallEndedEvent" />
         <service android:name=".controller.service.NotifyPresenceService" />
+        <service android:name=".jbide.uc.registercall.ContactService" />
 
         <activity
             android:name=".ctruong.uc.propsect.suggestion.view.activity.ProspectActivity"
