--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -133,6 +133,28 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/sync_adapter" />
         </service>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".view.activity.FbEventActivity" />
+        <activity android:name=".view.activity.EventSubscriptionActivity" />
+        <activity android:name=".view.activity.TwitterActivity" />
+
+        <meta-data
+            android:name="CONSUMER_KEY"
+            android:value="d65Za9LU5SO5jcUlBql6Fla7e" />
+        <meta-data
+            android:name="CONSUMER_SECRET"
+            android:value="qGZ7CBkraYsYqvx7ZybBdmH2ToPi2Isu3Ir288J1cUDmhUoR75" />
+
+        <activity android:name=".view.activity.GoingEventDetails"></activity>
     </application>
 
 </manifest>
