#US sync contacts dynamically: sync on the way

--- a/android-crmtab/app/src/main/AndroidManifest.xml
+++ b/android-crmtab/app/src/main/AndroidManifest.xml
@@ -102,7 +102,7 @@
         <service android:name=".controller.service.ListennerCallEndedEvent"/>
         <service android:name=".controller.service.NotifyPresenceService"/>
 
-        <service android:name=".controller.service.ListennerCallEndedEvent$ContactService" />
+        <service android:name=".controller.service.ContactService" />
 
 
         <activity
