Admin activity is completed

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <modules>
         <module>server-notification</module>
-        <module>server-rest</module>
+        <module>api</module>
     </modules>
 
     <properties>
