--- a/server-rest/pom.xml
+++ b/server-rest/pom.xml
@@ -9,12 +9,10 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>server-rest</artifactId>
+    <artifactId>api</artifactId>
     <packaging>war</packaging>
-    <version>2.1</version>
 
     <properties>
-        <java-version>1.6</java-version>
         <org.springframework-version>3.1.1.RELEASE</org.springframework-version>
         <org.aspectj-version>1.6.10</org.aspectj-version>
         <org.slf4j-version>1.7.13</org.slf4j-version>
